# schedule

./: .buildinfo  .deepsource.toml  .gitignore  LICENSE  Overview.html  README.md  README.rst  Schedule_D2022-02-01.xlsx  Schedule_M2022-02-01.xlsx  Schedule_W2022-02-01.xlsx  contributing.html  example.json  genindex.html  index.html  make.bat  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/: CONTRIBUTING.md  ISSUSES_TEMPLATE.md
.github/workflows/: docs.yml  main.yml  spell-check.yml
_modules/: index.html
_modules/schedule/: __main__.html  _client.html  _domain.html  _shared.html
_sources/: contributing.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/schedule/: index.rst.txt
_sources/notebooks/: Recipe_Get_Schedule_Day.ipynb.txt  Recipe_Get_Schedule_Month.ipynb.txt
autoapi/: index.html
autoapi/schedule/: index.html
autoapi/schedule/__main__/: index.html
autoapi/schedule/_client/: index.html
autoapi/schedule/_domain/: index.html
autoapi/schedule/_shared/: index.html
data/: Schedule_2022-03-14.xlsx  Schedule_Plus_2022-03-15.xlsx  Schedule_Plus_2022-03-18.xlsx  Schedule_Radiožurnál_2022-03-17.xlsx  Schedule_Radiožurnál_2022-03-19.xlsx  example_rz_station.json
data/sheet/: Schedule_2022-03-14.xlsx  Schedule_M2022-01-01.xlsx  Schedule_P2022-01-01_2022-01-15.xlsx  Schedule_Plus_2022-03-14.xlsx  Schedule_Plus_2022-03-15.xlsx  Schedule_Plus_2022-03-16.xlsx  Schedule_Plus_2022-03-17.xlsx  Schedule_Plus_2022-03-18.xlsx  Schedule_Plus_2022-03-19.xlsx  Schedule_Plus_2022-03-20.xlsx  Schedule_Plus_W2022-03-14.xlsx  Schedule_Plus_W2022-03-15.xlsx  Schedule_Plus_W2022-03-16.xlsx  Schedule_Plus_W2022-03-17.xlsx  Schedule_Plus_W2022-03-18.xlsx  Schedule_Plus_W2022-03-19.xlsx  Schedule_Plus_W2022-03-20.xlsx  Schedule_Radiožurnál_2022-03-14.xlsx  Schedule_Radiožurnál_2022-03-15.xlsx  Schedule_Radiožurnál_2022-03-16.xlsx  Schedule_Radiožurnál_2022-03-17.xlsx  Schedule_Radiožurnál_2022-03-18.xlsx  Schedule_Radiožurnál_2022-03-19.xlsx  Schedule_Radiožurnál_2022-03-20.xlsx  Schedule_Radiožurnál_W2022-03-14.xlsx  Schedule_Radiožurnál_W2022-03-15.xlsx  Schedule_Radiožurnál_W2022-03-16.xlsx  Schedule_Radiožurnál_W2022-03-17.xlsx  Schedule_Radiožurnál_W2022-03-18.xlsx  Schedule_Radiožurnál_W2022-03-19.xlsx  Schedule_Radiožurnál_W2022-03-20.xlsx  Schedule_W2022-01-01.xlsx  Schedule_W2022-03-14.xlsx  Schedule_W2022-03-28.xlsx  Schedule_Y2022.xlsx
data/sheet/2021/: Schedule_Plus_2021W01_2021-01-04_2021-01-10.xlsx  Schedule_Plus_2021W02_2021-01-11_2021-01-17.xlsx  Schedule_Plus_2021W03_2021-01-18_2021-01-24.xlsx  Schedule_Plus_2021W04_2021-01-25_2021-01-31.xlsx  Schedule_Plus_2021W05_2021-02-01_2021-02-07.xlsx  Schedule_Plus_2021W06_2021-02-08_2021-02-14.xlsx  Schedule_Plus_2021W07_2021-02-15_2021-02-21.xlsx  Schedule_Plus_2021W08_2021-02-22_2021-02-28.xlsx  Schedule_Plus_2021W09_2021-03-01_2021-03-07.xlsx  Schedule_Plus_2021W10_2021-03-08_2021-03-14.xlsx  Schedule_Plus_2021W11_2021-03-15_2021-03-21.xlsx  Schedule_Plus_2021W12_2021-03-22_2021-03-28.xlsx  Schedule_Plus_2021W13_2021-03-29_2021-04-04.xlsx  Schedule_Plus_2021W14_2021-04-05_2021-04-11.xlsx  Schedule_Plus_2021W15_2021-04-12_2021-04-18.xlsx  Schedule_Plus_2021W16_2021-04-19_2021-04-25.xlsx  Schedule_Plus_2021W17_2021-04-26_2021-05-02.xlsx  Schedule_Plus_2021W18_2021-05-03_2021-05-09.xlsx  Schedule_Plus_2021W19_2021-05-10_2021-05-16.xlsx  Schedule_Plus_2021W20_2021-05-17_2021-05-23.xlsx  Schedule_Plus_2021W21_2021-05-24_2021-05-30.xlsx  Schedule_Plus_2021W22_2021-05-31_2021-06-06.xlsx  Schedule_Plus_2021W23_2021-06-07_2021-06-13.xlsx  Schedule_Plus_2021W24_2021-06-14_2021-06-20.xlsx  Schedule_Plus_2021W25_2021-06-21_2021-06-27.xlsx  Schedule_Plus_2021W26_2021-06-28_2021-07-04.xlsx  Schedule_Plus_2021W27_2021-07-05_2021-07-11.xlsx  Schedule_Plus_2021W28_2021-07-12_2021-07-18.xlsx  Schedule_Plus_2021W29_2021-07-19_2021-07-25.xlsx  Schedule_Plus_2021W30_2021-07-26_2021-08-01.xlsx  Schedule_Plus_2021W31_2021-08-02_2021-08-08.xlsx  Schedule_Plus_2021W32_2021-08-09_2021-08-15.xlsx  Schedule_Plus_2021W33_2021-08-16_2021-08-22.xlsx  Schedule_Plus_2021W34_2021-08-23_2021-08-29.xlsx  Schedule_Plus_2021W35_2021-08-30_2021-09-05.xlsx  Schedule_Plus_2021W36_2021-09-06_2021-09-12.xlsx  Schedule_Plus_2021W37_2021-09-13_2021-09-19.xlsx  Schedule_Plus_2021W38_2021-09-20_2021-09-26.xlsx  Schedule_Plus_2021W39_2021-09-27_2021-10-03.xlsx  Schedule_Plus_2021W40_2021-10-04_2021-10-10.xlsx  (+12 more)
data/sheet/2022/: Schedule_Plus_2022W01_2022-01-03_2022-01-09.xlsx  Schedule_Plus_2022W02_2022-01-10_2022-01-16.xlsx  Schedule_Plus_2022W03_2022-01-17_2022-01-23.xlsx  Schedule_Plus_2022W04_2022-01-24_2022-01-30.xlsx  Schedule_W2022-03-28.xlsx  (+16 more)
docs/: Examples.ipynb  Recipe - Get Week Schedules.ipynb  Schedule.xlsx  _index.html  conf.py  index.rst  requirements.txt  schedule_example.html  schedule_example.xlsx
docs/notebooks/: Recipe_Get_Schedule_Any.ipynb  Recipe_Get_Schedule_Day.ipynb  Recipe_Get_Schedule_Year.ipynb  Recipe_Get_Stations.ipynb
docs/source/: PROPOSAL.md  conf.py  index.rst  usage.rst
notebooks/: Recipe_Get_Schedule_Any.html  Recipe_Get_Schedule_Any.ipynb  Recipe_Get_Schedule_Day.html  Recipe_Get_Schedule_Day.ipynb  Recipe_Get_Schedule_Month.html  Recipe_Get_Schedule_Month.ipynb  Recipe_Get_Schedule_Week.html  Recipe_Get_Schedule_Week.ipynb  Recipe_Get_Schedule_Year.html  Recipe_Get_Schedule_Year.ipynb  Recipe_Get_Show_Filtering.html  Recipe_Get_Show_Filtering.ipynb  Recipe_Get_Stations.html  Recipe_Get_Stations.ipynb
tests/: test_client.py  test_domain.py  test_package.py  test_program.py  test_repository.py
(+47 files in other folders)
