[metadata]
name = cro.schedule
version = attr: cro.schedule.__version__
author = Czech Radio
author_email = david.landa@rozhlas.cz
description = The ð” ð”¯ð”¬-ð”°ð” ð”¥ð”¢ð”¡ð”²ð”©ð”¢-ð” ð”©ð”¦ð”¢ð”«ð”± is a Python library to work with iRozhlas schedule REST service.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/czech-radio/cro-schedule-client
project_urls =
    Bug Tracker = https://github.com/czech-radio/cro-schedule-client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
python_requires = >=3.9

install_requires =
    tqdm
    pandas
    requests
    openpyxl

package_dir =
    = src

packages = find_namespace:

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-html
lint =
    black[jupyter]
    isort
    flake8
docs =
    sphinx
    jupyterlab
web =
    flask

[options.entry_points]
# console_scripts = program_name=package_name.module_name:main

[tool:pytest]
minversion = 6.0
addopts = -ra -q --maxfail=2
testpaths = tests
console_output_style = progress
markers =
    client: The client tests
    domain: The domain tests

[tool:mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True

[tool:black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
# extend-exclude = '''
#     /(
#         | tests/data
#     )/
# '''

[tool.isort]
profile = "hug"
src_paths = ["src", "tests"]
