[metadata]
name = cro-schedule
version = attr: cro.schedule.__version__
author = Czech Radio
author_email = david.landa@rozhlas.cz
description = The library and program to work with Czech Radio schedules.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/czech-radio/cro-schedule
project_urls =
    Source = https://github.com/czech-radio/cro-schedule
    Tracker = https://github.com/czech-radio/cro-schedule/issues
    Documentation =
license = MIT
license_files = LICENSE
classifiers =
    Environment :: Console
    Natural Language :: English
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries

[options]
python_requires = >=3.11

install_requires =
    tqdm
    pandas
    requests
    openpyxl

package_dir =
    = src

include_package_data = True

[options.package_data]
* = py.types

packages = find_namespace:

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-html
lint =
    black[jupyter]
    isort
    flake8
    pylint
    mypy
    pydocstyle
docs =
    sphinx
    myst-parser
    sphinx_rtd_theme

type =
    types-requests
    pandas-stubs
    types-setuptools
dev =
    cro.schedule[test]
    cro.schedule[lint]
    cro.schedule[docs]
    cro.schedule[types]

[options.entry_points]
console_scripts =
    cro.schedule=cro.schedule.__main__:main

[tool:pytest]
minversion = 6.0
addopts = -ra -q --maxfail=2
testpaths = tests
console_output_style = progress
markers =
    client: The client tests
    domain: The domain tests

[tool:mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True

[tool:black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
# extend-exclude = '''
#     /(
#         | tests/data
#     )/
# '''

[tool.isort]
profile = "hug"
src_paths = ["src", "tests"]
